--- a/web-app/css/topic/app.css
+++ b/web-app/css/topic/app.css
@@ -2,3 +2,4 @@ body {
     padding-top: 100px;
 }
 .bs-docs-sidebar.affix {width: 340px;top:100px;}
+#sidebar-categories li a {text-transform: capitalize;}
