Fixed some sass issues and removed unused files.

--- a/web-app/css/survey/socialize-bookmarks.css
+++ b/web-app/css/survey/socialize-bookmarks.css
@@ -56,7 +56,7 @@
 
 /* line 53, ../../sass/survey/socialize-bookmarks.scss */
 .social-bookmarks li.aim a {
-  background: url(/images/socialize-icons/aim.png) no-repeat 0 0;
+  background: url(../img/socialize-icons/aim.png) no-repeat 0 0;
 }
 /* line 55, ../../sass/survey/socialize-bookmarks.scss */
 .social-bookmarks li.aim a:hover {
@@ -64,7 +64,7 @@
 }
 /* line 59, ../../sass/survey/socialize-bookmarks.scss */
 .social-bookmarks li.apple a {
-  background: url(/images/socialize-icons/apple.png) no-repeat 0 0;
+  background: url(../img/socialize-icons/apple.png) no-repeat 0 0;
 }
 /* line 61, ../../sass/survey/socialize-bookmarks.scss */
 .social-bookmarks li.apple a:hover {
@@ -72,7 +72,7 @@
 }
 /* line 65, ../../sass/survey/socialize-bookmarks.scss */
 .social-bookmarks li.blogger a {
-  background: url(/images/socialize-icons/blogger.png) no-repeat 0 0;
+  background: url(../img/socialize-icons/blogger.png) no-repeat 0 0;
 }
 /* line 67, ../../sass/survey/socialize-bookmarks.scss */
 .social-bookmarks li.blogger a:hover {
@@ -80,7 +80,7 @@
 }
 /* line 71, ../../sass/survey/socialize-bookmarks.scss */
 .social-bookmarks li.digg a {
-  background: url(/images/socialize-icons/digg.png) no-repeat 0 0;
+  background: url(../img/socialize-icons/digg.png) no-repeat 0 0;
 }
 /* line 73, ../../sass/survey/socialize-bookmarks.scss */
 .social-bookmarks li.digg a:hover {
@@ -88,7 +88,7 @@
 }
 /* line 77, ../../sass/survey/socialize-bookmarks.scss */
 .social-bookmarks li.dopplr a {
-  background: url(/images/socialize-icons/dopplr.png) no-repeat 0 0;
+  background: url(../img/socialize-icons/dopplr.png) no-repeat 0 0;
 }
 /* line 79, ../../sass/survey/socialize-bookmarks.scss */
 .social-bookmarks li.dopplr a:hover {
@@ -96,7 +96,7 @@
 }
 /* line 83, ../../sass/survey/socialize-bookmarks.scss */
 .social-bookmarks li.dribbble a {
-  background: url(/images/socialize-icons/dribbble.png) no-repeat 0 0;
+  background: url(../img/socialize-icons/dribbble.png) no-repeat 0 0;
 }
 /* line 85, ../../sass/survey/socialize-bookmarks.scss */
 .social-bookmarks li.dribbble a:hover {
@@ -104,7 +104,7 @@
 }
 /* line 89, ../../sass/survey/socialize-bookmarks.scss */
 .social-bookmarks li.facebook a {
-  background: url(/images/socialize-icons/facebook.png) no-repeat 0 0;
+  background: url(../img/socialize-icons/facebook.png) no-repeat 0 0;
 }
 /* line 91, ../../sass/survey/socialize-bookmarks.scss */
 .social-bookmarks li.facebook a:hover {
@@ -112,7 +112,7 @@
 }
 /* line 95, ../../sass/survey/socialize-bookmarks.scss */
 .social-bookmarks li.flickr a {
-  background: url(/images/socialize-icons/flickr.png) no-repeat 0 0;
+  background: url(../img/socialize-icons/flickr.png) no-repeat 0 0;
 }
 /* line 97, ../../sass/survey/socialize-bookmarks.scss */
 .social-bookmarks li.flickr a:hover {
@@ -120,7 +120,7 @@
 }
 /* line 101, ../../sass/survey/socialize-bookmarks.scss */
 .social-bookmarks li.github a {
-  background: url(/images/socialize-icons/github.png) no-repeat 0 0;
+  background: url(../img/socialize-icons/github.png) no-repeat 0 0;
 }
 /* line 103, ../../sass/survey/socialize-bookmarks.scss */
 .social-bookmarks li.github a:hover {
@@ -128,7 +128,7 @@
 }
 /* line 107, ../../sass/survey/socialize-bookmarks.scss */
 .social-bookmarks li.google a {
-  background: url(/images/socialize-icons/google.png) no-repeat 0 0;
+  background: url(../img/socialize-icons/google.png) no-repeat 0 0;
 }
 /* line 109, ../../sass/survey/socialize-bookmarks.scss */
 .social-bookmarks li.google a:hover {
@@ -136,7 +136,7 @@
 }
 /* line 113, ../../sass/survey/socialize-bookmarks.scss */
 .social-bookmarks li.googleplus a {
-  background: url(/images/socialize-icons/googleplus.png) no-repeat 0 0;
+  background: url(../img/socialize-icons/googleplus.png) no-repeat 0 0;
 }
 /* line 115, ../../sass/survey/socialize-bookmarks.scss */
 .social-bookmarks li.googleplus a:hover {
@@ -144,7 +144,7 @@
 }
 /* line 119, ../../sass/survey/socialize-bookmarks.scss */
 .social-bookmarks li.html5 a {
-  background: url(/images/socialize-icons/html5.png) no-repeat 0 0;
+  background: url(../img/socialize-icons/html5.png) no-repeat 0 0;
 }
 /* line 121, ../../sass/survey/socialize-bookmarks.scss */
 .social-bookmarks li.html5 a:hover {
@@ -152,7 +152,7 @@
 }
 /* line 125, ../../sass/survey/socialize-bookmarks.scss */
 .social-bookmarks li.icloud a {
-  background: url(/images/socialize-icons/icloud.png) no-repeat 0 0;
+  background: url(../img/socialize-icons/icloud.png) no-repeat 0 0;
 }
 /* line 127, ../../sass/survey/socialize-bookmarks.scss */
 .social-bookmarks li.icloud a:hover {
@@ -160,7 +160,7 @@
 }
 /* line 131, ../../sass/survey/socialize-bookmarks.scss */
 .social-bookmarks li.linkedin a {
-  background: url(/images/socialize-icons/linkedin.png) no-repeat 0 0;
+  background: url(../img/socialize-icons/linkedin.png) no-repeat 0 0;
 }
 /* line 133, ../../sass/survey/socialize-bookmarks.scss */
 .social-bookmarks li.linkedin a:hover {
@@ -168,7 +168,7 @@
 }
 /* line 137, ../../sass/survey/socialize-bookmarks.scss */
 .social-bookmarks li.rss a {
-  background: url(/images/socialize-icons/rss.png) no-repeat 0 0;
+  background: url(../img/socialize-icons/rss.png) no-repeat 0 0;
 }
 /* line 139, ../../sass/survey/socialize-bookmarks.scss */
 .social-bookmarks li.rss a:hover {
@@ -176,7 +176,7 @@
 }
 /* line 143, ../../sass/survey/socialize-bookmarks.scss */
 .social-bookmarks li.skype a {
-  background: url(/images/socialize-icons/skype.png) no-repeat 0 0;
+  background: url(../img/socialize-icons/skype.png) no-repeat 0 0;
 }
 /* line 145, ../../sass/survey/socialize-bookmarks.scss */
 .social-bookmarks li.skype a:hover {
@@ -184,7 +184,7 @@
 }
 /* line 149, ../../sass/survey/socialize-bookmarks.scss */
 .social-bookmarks li.twitter a {
-  background: url(/images/socialize-icons/twitter.png) no-repeat 0 0;
+  background: url(../img/socialize-icons/twitter.png) no-repeat 0 0;
 }
 /* line 151, ../../sass/survey/socialize-bookmarks.scss */
 .social-bookmarks li.twitter a:hover {
@@ -192,7 +192,7 @@
 }
 /* line 155, ../../sass/survey/socialize-bookmarks.scss */
 .social-bookmarks li.wordpress a {
-  background: url(/images/socialize-icons/wordpress.png) no-repeat 0 0;
+  background: url(../img/socialize-icons/wordpress.png) no-repeat 0 0;
 }
 /* line 157, ../../sass/survey/socialize-bookmarks.scss */
 .social-bookmarks li.wordpress a:hover {
@@ -200,7 +200,7 @@
 }
 /* line 161, ../../sass/survey/socialize-bookmarks.scss */
 .social-bookmarks li.yahoo a {
-  background: url(/images/socialize-icons/yahoo.png) no-repeat 0 0;
+  background: url(../img/socialize-icons/yahoo.png) no-repeat 0 0;
 }
 /* line 163, ../../sass/survey/socialize-bookmarks.scss */
 .social-bookmarks li.yahoo a:hover {
@@ -208,7 +208,7 @@
 }
 /* line 167, ../../sass/survey/socialize-bookmarks.scss */
 .social-bookmarks li.yelp a {
-  background: url(/images/socialize-icons/yelp.png) no-repeat 0 0;
+  background: url(../img/socialize-icons/yelp.png) no-repeat 0 0;
 }
 /* line 169, ../../sass/survey/socialize-bookmarks.scss */
 .social-bookmarks li.yelp a:hover {
@@ -216,7 +216,7 @@
 }
 /* line 173, ../../sass/survey/socialize-bookmarks.scss */
 .social-bookmarks li.youtube a {
-  background: url(/images/socialize-icons/youtube.png) no-repeat 0 0;
+  background: url(../img/socialize-icons/youtube.png) no-repeat 0 0;
 }
 /* line 175, ../../sass/survey/socialize-bookmarks.scss */
 .social-bookmarks li.youtube a:hover {
