Fixed images issues in socialize-bookmark.css and some issues in template.gsp

--- a/web-app/sass/survey/socialize-bookmarks.scss
+++ b/web-app/sass/survey/socialize-bookmarks.scss
@@ -51,127 +51,127 @@
 
 .social-bookmarks li {
   &.aim a {
-    background: url(../img/socialize-icons/aim.png) no-repeat 0 0;
+    background: url(/images/socialize-icons/aim.png) no-repeat 0 0;
     &:hover {
       background-color: #e95a00;
     }
   }
   &.apple a {
-    background: url(../img/socialize-icons/apple.png) no-repeat 0 0;
+    background: url(/images/socialize-icons/apple.png) no-repeat 0 0;
     &:hover {
       background-color: #606060;
     }
   }
   &.blogger a {
-    background: url(../img/socialize-icons/blogger.png) no-repeat 0 0;
+    background: url(/images/socialize-icons/blogger.png) no-repeat 0 0;
     &:hover {
       background-color: #fb913f;
     }
   }
   &.digg a {
-    background: url(../img/socialize-icons/digg.png) no-repeat 0 0;
+    background: url(/images/socialize-icons/digg.png) no-repeat 0 0;
     &:hover {
       background-color: #2882c6;
     }
   }
   &.dopplr a {
-    background: url(../img/socialize-icons/dopplr.png) no-repeat 0 0;
+    background: url(/images/socialize-icons/dopplr.png) no-repeat 0 0;
     &:hover {
       background-color: #99cc66;
     }
   }
   &.dribbble a {
-    background: url(../img/socialize-icons/dribbble.png) no-repeat 0 0;
+    background: url(/images/socialize-icons/dribbble.png) no-repeat 0 0;
     &:hover {
       background-color: #ef5b92;
     }
   }
   &.facebook a {
-    background: url(../img/socialize-icons/facebook.png) no-repeat 0 0;
+    background: url(/images/socialize-icons/facebook.png) no-repeat 0 0;
     &:hover {
       background-color: #3b5998;
     }
   }
   &.flickr a {
-    background: url(../img/socialize-icons/flickr.png) no-repeat 0 0;
+    background: url(/images/socialize-icons/flickr.png) no-repeat 0 0;
     &:hover {
       background-color: #f1628b;
     }
   }
   &.github a {
-    background: url(../img/socialize-icons/github.png) no-repeat 0 0;
+    background: url(/images/socialize-icons/github.png) no-repeat 0 0;
     &:hover {
       background-color: #7292a2;
     }
   }
   &.google a {
-    background: url(../img/socialize-icons/google.png) no-repeat 0 0;
+    background: url(/images/socialize-icons/google.png) no-repeat 0 0;
     &:hover {
       background-color: #dd4b39;
     }
   }
   &.googleplus a {
-    background: url(../img/socialize-icons/googleplus.png) no-repeat 0 0;
+    background: url(/images/socialize-icons/googleplus.png) no-repeat 0 0;
     &:hover {
       background-color: #d94a39;
     }
   }
   &.html5 a {
-    background: url(../img/socialize-icons/html5.png) no-repeat 0 0;
+    background: url(/images/socialize-icons/html5.png) no-repeat 0 0;
     &:hover {
       background-color: #f3642c;
     }
   }
   &.icloud a {
-    background: url(../img/socialize-icons/icloud.png) no-repeat 0 0;
+    background: url(/images/socialize-icons/icloud.png) no-repeat 0 0;
     &:hover {
       background-color: #fb913f;
     }
   }
   &.linkedin a {
-    background: url(../img/socialize-icons/linkedin.png) no-repeat 0 0;
+    background: url(/images/socialize-icons/linkedin.png) no-repeat 0 0;
     &:hover {
       background-color: #71b2d0;
     }
   }
   &.rss a {
-    background: url(../img/socialize-icons/rss.png) no-repeat 0 0;
+    background: url(/images/socialize-icons/rss.png) no-repeat 0 0;
     &:hover {
       background-color: #fe9900;
     }
   }
   &.skype a {
-    background: url(../img/socialize-icons/skype.png) no-repeat 0 0;
+    background: url(/images/socialize-icons/skype.png) no-repeat 0 0;
     &:hover {
       background-color: #18b7f1;
     }
   }
   &.twitter a {
-    background: url(../img/socialize-icons/twitter.png) no-repeat 0 0;
+    background: url(/images/socialize-icons/twitter.png) no-repeat 0 0;
     &:hover {
       background-color: #48c4d2;
     }
   }
   &.wordpress a {
-    background: url(../img/socialize-icons/wordpress.png) no-repeat 0 0;
+    background: url(/images/socialize-icons/wordpress.png) no-repeat 0 0;
     &:hover {
       background-color: #464646;
     }
   }
   &.yahoo a {
-    background: url(../img/socialize-icons/yahoo.png) no-repeat 0 0;
+    background: url(/images/socialize-icons/yahoo.png) no-repeat 0 0;
     &:hover {
       background-color: #ab64bc;
     }
   }
   &.yelp a {
-    background: url(../img/socialize-icons/yelp.png) no-repeat 0 0;
+    background: url(/images/socialize-icons/yelp.png) no-repeat 0 0;
     &:hover {
       background-color: #c41200;
     }
   }
   &.youtube a {
-    background: url(../img/socialize-icons/youtube.png) no-repeat 0 0;
+    background: url(/images/socialize-icons/youtube.png) no-repeat 0 0;
     &:hover {
       background-color: #f45750;
     }
