--- a/web-app/sass/survey/style.scss
+++ b/web-app/sass/survey/style.scss
@@ -406,6 +406,7 @@ footer {
 
 ul#footer-nav {
   color:#563d7c;
+//  color: #333;
   margin: 25px 0 10px 0;
   li:first-child {
     margin-right: 30px;
