--- a/web-app/sass/topic/app.scss
+++ b/web-app/sass/topic/app.scss
@@ -3,4 +3,15 @@ body {
 }
 .bs-docs-sidebar.affix {width: 340px;top:100px;}
 #sidebar-categories li a {text-transform: capitalize;}
-.entry .desc {padding-bottom: 15px;}
+.entry .desc {padding:15px 0;}
+.entry .topic-entry {
+  padding: 20px 30px 20px 0;
+  border-top: 1px solid #E6E6E6;
+  border-bottom: 1px solid #E6E6E6;
+  font-size: 15px;
+  font-weight: 400;
+  text-transform: uppercase;
+}
+.entry .meta-sep {
+  padding: 0 3px;
+}
