Updated app.css for topic.

--- a/web-app/css/topic/app.css
+++ b/web-app/css/topic/app.css
@@ -25,11 +25,11 @@ body {
   border-top: 1px solid #E6E6E6;
   border-bottom: 1px solid #E6E6E6;
   font-size: 15px;
-  font-weight: 400;
+  font-weight: normal;
   text-transform: uppercase;
 }
 
-/* line 15, ../../sass/topic/app.scss */
+/* line 16, ../../sass/topic/app.scss */
 .entry .meta-sep {
   padding: 0 3px;
 }
