--- a/web-app/sass/survey/thankyou.scss
+++ b/web-app/sass/survey/thankyou.scss
@@ -1,12 +1,17 @@
 #main {
-  padding: 60px 0;
+  padding: 300px 0 60px 0
 }
+
 #countdown {
   font-size: 48px;
   color: #FFF;
   line-height: 1.1em;
-  margin: 40px 0px 60px;
+  margin: 20px 0px 20px;
 }
+
 .wrap-cd {
   text-align: center;
+}
+.main-title h1 {
+  margin-top: 10px !important;
 }
