--- a/web-app/sass/report/app.scss
+++ b/web-app/sass/report/app.scss
@@ -16,3 +16,126 @@ header {
 body {
   padding-top: 50px !important;
 }
+
+.bs-docs-featurette {
+  border-bottom: none !important;
+  padding-bottom: 50px !important;
+  padding-top: 50px !important;
+}
+
+.pbtm50{
+  padding-bottom: 50px !important;
+}
+
+.portfolio-item .portfolio-desc {
+  background: #6F5499;
+}
+
+/*===========================
+  Portfolio
+============================ */
+nav#filter a {
+  background-color: #EEE;
+  color:#555;
+}
+nav#filter a:hover, nav#filter a.current {
+  background-color: #44BCDD;
+  color:#fff;
+}
+
+/* ------- */
+
+.isotopeWrapper article{
+  margin-bottom: 30px;
+}
+
+#portfolio img  {
+  width:100%;
+}
+
+#portfolio article p {
+  margin-bottom:1.45em;/*set next row on the baseline*/
+}
+nav#filter {
+  margin-bottom:1.5em;
+}
+
+nav#filter li {
+  display:inline-block;
+  margin:0 0 0 5px;
+}
+nav#filter a {
+  padding: 4px 12px;
+  line-height: 20px;
+  text-decoration: none;
+}
+
+
+.portfolio-items article img {width:100%;}
+.portfolio-title {
+  color: #fff;width: 360px;height: 275px;background-color: #D4CCE0;text-align: center;
+  vertical-align: middle;display: table-cell;font-size: 24px;
+}
+.portfolio-item {
+  display: block;
+  position: relative;
+  -webkit-transition: all 0.2s ease-in-out;
+  -moz-transition: all 0.2s ease-in-out;
+  -o-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+}
+.portfolio-item img {
+  -webkit-transition: all 300ms linear;
+  -moz-transition: all 300ms linear;
+  -o-transition: all 300ms linear;
+  -ms-transition: all 300ms linear;
+  transition: all 300ms linear;
+
+}
+.portfolio-item .portfolio-desc {
+  display: block;
+  opacity: 0;
+  position: absolute;
+  width: 100%;
+  left: 0;
+  top: 0;
+  color: #dcdcdc;
+}
+
+.portfolio-item:hover .portfolio-desc {
+  padding-top: 20%;
+  height: 100%;
+  transition: all 200ms ease-in-out 0s;
+  opacity: 1;
+}
+
+.portfolio-item .portfolio-desc a {
+  color: #fff;
+}
+.portfolio-item .portfolio-desc a:hover {
+  /*text-shadow: 2px 2px 1px rgba(0, 0, 0, 0.7);*/
+  text-decoration: none;
+}
+.portfolio-item .portfolio-desc .folio-info {
+  top:-20px;
+  padding: 30px;
+  height: 0;
+  opacity: 0;
+  position: relative;
+}
+
+.portfolio-item:hover .folio-info{
+  height: 100%;
+  opacity: 1;
+  transition: all 500ms ease-in-out 0s;
+  top:5px;
+}
+
+.portfolio-item .portfolio-desc .folio-info h5 {
+  text-transform: uppercase;
+}
+.portfolio-item .portfolio-desc .folio-info p {
+  color: #ffffff;
+  font-size: 12px;
+}
+
