--- a/web-app/sass/report/app.scss
+++ b/web-app/sass/report/app.scss
@@ -138,4 +138,7 @@ nav#filter a {
   color: #ffffff;
   font-size: 12px;
 }
-
+// Thumbnail
+.thumbnail .project-item-image-container img {
+  height: 263px !important;
+}
