--- a/web-app/sass/survey/style.scss
+++ b/web-app/sass/survey/style.scss
@@ -590,12 +590,12 @@ ul#footer-nav {
   transition: all 0.2s ease-in-out;
   -webkit-border-radius: 0px;
   -webkit-box-shadow: none;
-  -webkit-transition: all 0.2s ease-in-out;
+ /* -webkit-transition: all 0.2s ease-in-out;
   &:hover {
     h4 {
       margin-top: -40px;
     }
-  }
+  }*/
 }
 
 .caption {
