--- a/web-app/css/iCheck/custom.css
+++ b/web-app/css/iCheck/custom.css
@@ -2,15 +2,16 @@
 label {
   cursor: pointer;
   font-weight: normal;
-  padding-bottom: 15px;
+  margin-bottom: 15px;
+  display: block;
 }
 
-/* line 6, ../../sass/iCheck/custom.scss */
+/* line 7, ../../sass/iCheck/custom.scss */
 label > span {
   padding-left: 5px;
 }
 
-/* line 10, ../../sass/iCheck/custom.scss */
+/* line 11, ../../sass/iCheck/custom.scss */
 td:first-child {
   width: 30%;
 }
