--- a/web-app/sass/iCheck/custom.scss
+++ b/web-app/sass/iCheck/custom.scss
@@ -1,7 +1,8 @@
 label {
   cursor: pointer;
   font-weight: normal;
-  padding-bottom: 15px;
+  margin-bottom: 15px;
+  display: block;
 }
 label > span {
   padding-left: 5px;
