Updated preferences survey page with showing all three prefs on last page.

--- a/web-app/sass/survey/style.scss
+++ b/web-app/sass/survey/style.scss
@@ -292,7 +292,7 @@ header {
   padding: 10px 0;
   width: 100%;
   background-color: #fff;
-//  background: url(img/line_header.png) repeat-x left bottom;
+  //  background: url(img/line_header.png) repeat-x left bottom;
   .navbar-brand {
     color: #563d7c;
   }
@@ -300,7 +300,7 @@ header {
 
 #logo a {
   text-indent: -99999px;
-//  background: url(img/logo.png) no-repeat 0 0;
+  //  background: url(img/logo.png) no-repeat 0 0;
   display: block;
   height: 32px;
   width: 151px;
@@ -396,7 +396,7 @@ footer {
   width: 100%;
   background: #fff;
   a {
-    color:#428bca;
+    color: #428bca;
     &:hover {
       color: #2a6496;
       text-decoration: underline;
@@ -405,8 +405,8 @@ footer {
 }
 
 ul#footer-nav {
-  color:#563d7c;
-//  color: #333;
+  color: #563d7c;
+  //  color: #333;
   margin: 25px 0 10px 0;
   li:first-child {
     margin-right: 30px;
@@ -512,6 +512,13 @@ ul#footer-nav {
     text-align: center;
     margin-bottom: 40px;
   }
+  ul.selected {
+    text-align: left;
+    font-size: 18px;
+    i {
+      font-size: 25px;
+    }
+  }
   i {
     color: #cacaca;
     margin: 0 0 10px 0;
@@ -590,12 +597,12 @@ ul#footer-nav {
   transition: all 0.2s ease-in-out;
   -webkit-border-radius: 0px;
   -webkit-box-shadow: none;
- /* -webkit-transition: all 0.2s ease-in-out;
-  &:hover {
-    h4 {
-      margin-top: -40px;
-    }
-  }*/
+  /* -webkit-transition: all 0.2s ease-in-out;
+   &:hover {
+     h4 {
+       margin-top: -40px;
+     }
+   }*/
 }
 
 .caption {
@@ -1214,6 +1221,14 @@ ul.data-list-2 li label.error {
   #complete h3 {
     font-size: 18px;
     margin-bottom: 20px;
+  }
+
+  ul.selected {
+    font-size: 18px;
+    text-align: left;
+    i {
+      font-size: 25px;
+    }
   }
 
   #complete i {
