slider added, comment added in survey response

--- a/web-app/css/survey/style.css
+++ b/web-app/css/survey/style.css
@@ -83,7 +83,7 @@ h2 span {
 h3 {
   font-size: 32px;
   font-weight: 600;
-  text-align: center;
+  /*text-align: center;*/
   line-height: 32px;
   margin-bottom: 45px;
 }
